// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!--
alert(1)
-->
=====================================output=====================================
<!--
alert(1);
-->

================================================================================
`;

exports[`comment.js format[__babel_estree] 1`] = `
"Unexpected token (1:1)
> 1 | <!--
    | ^
  2 | alert(1)
  3 | -->
Cause: Unexpected token (1:0)"
`;

exports[`comment.js format[babel] 1`] = `
"Unexpected token (1:1)
> 1 | <!--
    | ^
  2 | alert(1)
  3 | -->
Cause: Unexpected token (1:0)"
`;

exports[`comment.js format[babel-ts] 1`] = `
"Unexpected token (1:1)
> 1 | <!--
    | ^
  2 | alert(1)
  3 | -->
Cause: Unexpected token (1:0)"
`;

exports[`comment.js format[flow] 1`] = `
"Unexpected token \`!\`, expected the token \`>\` (1:2)
> 1 | <!--
    |  ^
  2 | alert(1)
  3 | -->
Cause: Unexpected token \`!\`, expected the token \`>\` (1:1)"
`;

exports[`comment.js format[hermes] 1`] = `
"'identifier' expected as JSX element name (1:2)
> 1 | <!--
    |  ^
  2 | alert(1)
  3 | -->
Cause: 'identifier' expected as JSX element name (1:1)
<!--
 ^"
`;

exports[`comment.js format[typescript] 1`] = `
"Expression expected. (1:1)
> 1 | <!--
    | ^
  2 | alert(1)
  3 | -->
Cause: Expression expected."
`;
